--- a/SwatchBharatMission.Automation.Service/SwatchBharatMission.Automation.Service/appsettings.json
+++ b/SwatchBharatMission.Automation.Service/SwatchBharatMission.Automation.Service/appsettings.json
@@ -6,21 +6,17 @@
     }
   },
   "AutomationSettings": {
-    "Cron": "0 07 17 * * ?",
+    "Cron": "50 10 09 * * ?",
     "BaseUrl": "https://sbm.gov.in/SBMPhase2/Secure/Entry/UserMenu.aspx",
-    "TestCases": {
-      "TC_001": {
-        "State": "Maharashtra",
-        "City": "SOLAPUR"
-      }
+    "BaseSetting": {
+      "State": "Maharashtra",
+      "Data": [
+        { "city": "ratnagiri" },
+        { "city": "solapur" }
+      ]
     },
     "TestCaseId": "",
-    "TenantCode": "solapur",
-    "LoginEndpoint": "https://api.districtdashboard.in/api/account/login",
-    "Username": "auto",
-    "Password": "Auto#2026",
-    "DownloadPath": "C:\\Automation\\Downloads",
-    "UploadApiUrl": "https://api.districtdashboard.in/api/importreport/swatchbharat/mr5",
+    "RetryCount": 3,
     "Headless": true
   }
 }
