--- a/SwatchBharatMission.Automation.Service/Automation.Core/Automation.Core.csproj
+++ b/SwatchBharatMission.Automation.Service/Automation.Core/Automation.Core.csproj
@@ -7,8 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.2" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.2" />
     <PackageReference Include="Microsoft.Playwright" Version="1.57.0" />
+    <PackageReference Include="Serilog" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
