--- a/SwatchBharatMission.Automation.Service/Execution/Execution.csproj
+++ b/SwatchBharatMission.Automation.Service/Execution/Execution.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="ExtentReports" Version="5.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.2" />
+    <PackageReference Include="Serilog" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
