--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
           dotnet-version: '8.0.x'
 
       - name: Restore & Build
+        working-directory: SwatchBharatMission.Automation.Service
         run: |
           dotnet restore
           dotnet build --configuration Release
