--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
 
     - name: Install Playwright browsers
       working-directory: SwatchBharatMission.Automation.Service/SwatchBharatMission.Automation.Service
-      run:  playwright install --with-deps  
+      run:  playwright install --with-deps  --output ./bin/Release/net8.0/
 
     - name: Run Worker
       run: dotnet run --configuration Release --project SwatchBharatMission.Automation.Service/SwatchBharatMission.Automation.Service/SwatchBharatMission.Automation.Service.csproj
