--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,9 @@ jobs:
     - name: Build
       run: dotnet build SwatchBharatMission.Automation.Service/SwatchBharatMission.Automation.Service/SwatchBharatMission.Automation.Service.csproj --configuration Release
 
+    - name: Set Playwright Browser Path
+      run: echo "PLAYWRIGHT_BROWSERS_PATH=./bin/Release/net8.0/.playwright" >> $GITHUB_ENV
+
     - name: Install Playwright browsers
       working-directory: SwatchBharatMission.Automation.Service/SwatchBharatMission.Automation.Service
       run:  playwright install --with-deps
