--- a/SwatchBharatMission.Automation.Service/SwatchBharatMission.Automation.Service/appsettings.json
+++ b/SwatchBharatMission.Automation.Service/SwatchBharatMission.Automation.Service/appsettings.json
@@ -6,8 +6,9 @@
     }
   },
   "AutomationSettings": {
-  "Cron": "00 12 11 * * ?",
+    "Cron": "00 12 11 * * ?",
     "BaseUrl": "https://sbm.gov.in/SBMPhase2/Secure/Entry/UserMenu.aspx",
+    "Manrega_BaseUrl": "https://nreganarep.nic.in/netnrega/MISreport4.aspx",
     "BaseSetting": {
       "State": "Maharashtra",
       "Data": [
@@ -15,8 +16,52 @@
         { "city": "solapur" }
       ]
     },
-    "TestCaseId": "", 
+    "TestCaseId": "",
     "RetryCount": 3,
     "Headless": true
+  },
+
+  "Automation": {
+    "Flows": {
+      "Mnrega": {
+        "Enabled": false,
+        "BaseUrl": "https://nreganarep.nic.in/netnrega/MISreport4.aspx",
+        "RegistryPath": "/settings/seatch-bharat",
+        "RetryCount": 3,
+        "Headless": false,
+        "jsonFolderName": "manrega",
+        "BaseSetting": {
+          "State": "MAHARASHTRA",
+          "Data": [
+            {
+              "city": "ratnagiri",
+              "tenantcode": "ratnagiri"
+            }
+          ]
+        }
+      },
+
+      "SwatchBharat": {
+        "Enabled": true,
+        "BaseUrl": "https://sbm.gov.in/SBMPhase2/Secure/Entry/UserMenu.aspx",
+        "RegistryPath": "/settings/manrega",
+        "RetryCount": 3,
+        "jsonFolderName": "swatch-bharat",
+        "Headless": false,
+        "BaseSetting": {
+          "State": "Maharashtra",
+          "Data": [
+            {
+              "city": "ratnagiri",
+              "tenantcode": "ratnagiri"
+            },
+            {
+              "city": "solapur",
+              "tenantcode": "solapur"
+            }
+          ]
+        }
+      }
+    }
   }
 }
