--- a/SwatchBharatMission.Automation.Service/SwatchBharatMission.Automation.Service/appsettings.json
+++ b/SwatchBharatMission.Automation.Service/SwatchBharatMission.Automation.Service/appsettings.json
@@ -28,7 +28,7 @@
         "BaseUrl": "https://nreganarep.nic.in/netnrega/MISreport4.aspx",
         "RegistryPath": "/settings/seatch-bharat",
         "RetryCount": 3,
-        "Headless": false,
+        "Headless": true,
         "jsonFolderName": "manrega",
         "BaseSetting": {
           "State": "MAHARASHTRA",
@@ -47,7 +47,7 @@
         "RegistryPath": "/settings/manrega",
         "RetryCount": 3,
         "jsonFolderName": "swatch-bharat",
-        "Headless": false,
+        "Headless": true,
         "BaseSetting": {
           "State": "Maharashtra",
           "Data": [
