--- a/SwatchBharatMission.Automation.Service/SwatchBharatMission.Automation.Service/appsettings.json
+++ b/SwatchBharatMission.Automation.Service/SwatchBharatMission.Automation.Service/appsettings.json
@@ -24,7 +24,7 @@
   "Automation": {
     "Flows": {
       "Mnrega": {
-        "Enabled": false,
+        "Enabled": true,
         "BaseUrl": "https://nreganarep.nic.in/netnrega/MISreport4.aspx",
         "RegistryPath": "/settings/seatch-bharat",
         "RetryCount": 3,
