--- a/SwatchBharatMission.Automation.Service/SwatchBharatMission.Automation.Service/appsettings.json
+++ b/SwatchBharatMission.Automation.Service/SwatchBharatMission.Automation.Service/appsettings.json
@@ -42,7 +42,7 @@
       },
 
       "SwatchBharat": {
-        "Enabled": false,
+        "Enabled": true,
         "BaseUrl": "https://sbm.gov.in/SBMPhase2/Secure/Entry/UserMenu.aspx",
         "RegistryPath": "/settings/manrega",
         "RetryCount": 3,
