--- a/SwatchBharatMission.Automation.Service/SwatchBharatMission.Automation.Service/appsettings.json
+++ b/SwatchBharatMission.Automation.Service/SwatchBharatMission.Automation.Service/appsettings.json
@@ -5,31 +5,14 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AutomationSettings": {
-    "Cron": "00 12 11 * * ?",
-    "BaseUrl": "https://sbm.gov.in/SBMPhase2/Secure/Entry/UserMenu.aspx",
-    "Manrega_BaseUrl": "https://nreganarep.nic.in/netnrega/MISreport4.aspx",
-    "BaseSetting": {
-      "State": "Maharashtra",
-      "Data": [
-        { "city": "ratnagiri" },
-        { "city": "solapur" }
-      ]
-    },
-    "TestCaseId": "",
-    "RetryCount": 3,
-    "Headless": true
-  },
 
   "Automation": {
     "Flows": {
       "Mnrega": {
         "Enabled": true,
         "BaseUrl": "https://nreganarep.nic.in/netnrega/MISreport4.aspx",
-        "RegistryPath": "/settings/seatch-bharat",
         "RetryCount": 3,
         "Headless": true,
-        "jsonFolderName": "manrega",
         "BaseSetting": {
           "State": "MAHARASHTRA",
           "Data": [
@@ -40,13 +23,10 @@
           ]
         }
       },
-
       "SwatchBharat": {
-        "Enabled": false,
+        "Enabled": true,
         "BaseUrl": "https://sbm.gov.in/SBMPhase2/Secure/Entry/UserMenu.aspx",
-        "RegistryPath": "/settings/manrega",
         "RetryCount": 3,
-        "jsonFolderName": "swatch-bharat",
         "Headless": true,
         "BaseSetting": {
           "State": "Maharashtra",
