--- a/.github/workflows/Automation.yml
+++ b/.github/workflows/Automation.yml
@@ -11,10 +11,11 @@ jobs:
       - name: Azure login
         uses: azure/login@v2
         with:
+          auth-type: service-principal
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
 
       - name: Start VM
         run: az vm start --resource-group PlayWrightAutomation-Resources --name playwright-vm-win
@@ -49,10 +50,11 @@ jobs:
       - name: Azure login
         uses: azure/login@v2
         with:
+          auth-type: service-principal
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
 
       - name: Stop VM
         run: az vm deallocate --resource-group PlayWrightAutomation-Resources --name playwright-vm-win
