--- a/.github/workflows/Automation.yml
+++ b/.github/workflows/Automation.yml
@@ -1,7 +1,9 @@
-name: Run automation using VM
+name: Run Playwright Automation
 
 on:
-  workflow_dispatch:
+  workflow_dispatch: # Manual trigger
+  schedule:
+    - cron: '00 00 * * *'
   
 permissions:
   contents: read
