--- a/.github/workflows/Automation.yml
+++ b/.github/workflows/Automation.yml
@@ -1,8 +1,10 @@
 name: Run Playwright Automation
 
 on:
+  workflow_dispatch:
   schedule:
-      - cron: '25 1 * * *'
+    - cron: '0 1 * * *'
+    - cron: '0 7 * * *'
   
 permissions:
   contents: read
