--- a/.github/workflows/Automation.yml
+++ b/.github/workflows/Automation.yml
@@ -26,30 +26,81 @@ jobs:
             }
 
       - name: Start VM
-        run: az vm start --resource-group PlayWrightAutomation-Resources --name playwright-vm-win
+        run: az vm start --resource-group PlayWrightAutomation-Resources --name playwirght-linux-vm
 
   run-automation:
     needs: start-vm
-    runs-on: [self-hosted, windows]
+    runs-on: [Linux]
     steps:
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: '8.0.x'
+    - uses: actions/checkout@v4
 
-      - name: Install Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20.x'
+    - name: Add dotnet tools to PATH
+      run: echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
 
-      - name: Build project
-        run: |
-          dotnet restore SwatchBharatMission.Automation.Service/SwatchBharatMission.Automation.Service.sln
-          dotnet build SwatchBharatMission.Automation.Service/SwatchBharatMission.Automation.Service.sln -c Release
+    - name: Install Playwright CLI
+      run: dotnet tool update --global Microsoft.Playwright.CLI
 
-      - name: Run Playwright Tests
-        run: dotnet run --configuration Release --project SwatchBharatMission.Automation.Service/SwatchBharatMission.Automation.Service/SwatchBharatMission.Automation.Service.csproj
+    - name: Restore
+      run: dotnet restore SwatchBharatMission.Automation.Service/SwatchBharatMission.Automation.Service/SwatchBharatMission.Automation.Service.csproj
 
+    - name: Install Playwright OS dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y \
+          ca-certificates \
+          fonts-liberation \
+          libnss3 \
+          libatk1.0-0 \
+          libatk-bridge2.0-0 \
+          libx11-xcb1 \
+          libxcomposite1 \
+          libxdamage1 \
+          libxrandr2 \
+          libgbm1 \
+          libpangocairo-1.0-0 \
+          libcups2 \
+          libasound2t64
+  
+      # 4️⃣ Install PowerShell (MANDATORY)
+    - name: Install PowerShell
+      run: |
+          sudo snap install powershell --classic
+          pwsh --version
+  
+    # 5️⃣ Restore & Build (Release)
+    - name: Build project
+      working-directory: SwatchBharatMission.Automation.Service/SwatchBharatMission.Automation.Service
+      run: |
+        dotnet restore
+        dotnet build -c Release
+
+    # 6️⃣ Install Playwright browsers (THE KEY STEP)
+    - name: Install Playwright Chromium
+      working-directory: SwatchBharatMission.Automation.Service/SwatchBharatMission.Automation.Service/bin/Release/net8.0
+      run: |
+        pwsh -NoProfile -ExecutionPolicy Bypass -File ./playwright.ps1 install chromium
+
+
+    - name: Locate Playwright browsers
+      run: |
+            echo "Playwright cache:"
+            ls -R $HOME/.cache/ms-playwright || true
+        
+    - name: List Playwright browser folder
+      run: |
+        echo "Current directory:"
+        pwd
+    
+        echo "Listing bin/Release/net8.0:"
+        ls -la SwatchBharatMission.Automation.Service/SwatchBharatMission.Automation.Service/bin/Release/net8.0 || true
+    
+        echo "Listing .playwright:"
+        ls -la SwatchBharatMission.Automation.Service/SwatchBharatMission.Automation.Service/bin/Release/net8.0/.playwright || true
+    
+        echo "Listing local browsers:"
+        ls -la SwatchBharatMission.Automation.Service/SwatchBharatMission.Automation.Service/bin/Release/net8.0/.playwright/package/.local-browsers || true
+    - name: Run Worker
+      run: dotnet run --configuration Release --project SwatchBharatMission.Automation.Service/SwatchBharatMission.Automation.Service/SwatchBharatMission.Automation.Service.csproj
   stop-vm:
     needs: run-automation
     if: always()
@@ -66,4 +117,4 @@ jobs:
               "tenantId": "${{ secrets.AZURE_TENANT_ID }}"
             }
       - name: Stop VM
-        run: az vm deallocate --resource-group PlayWrightAutomation-Resources --name playwright-vm-win
+        run: az vm deallocate --resource-group PlayWrightAutomation-Resources --name playwirght-linux-vm 
